Support dragging with touch screens; fixes #192
Also fix some issues with scrolling the whole UI away because something is partially off-screen, and prevent the user from moving draggable windows off-screen

--- a/client/css/touch_ui.css
+++ b/client/css/touch_ui.css
@@ -1,6 +1,9 @@
 html, body {
   font-size: 16px;
   touch-action: none;
+  margin: 0;
+  height: 100%;
+  overflow: hidden
 }
 
 #chat-container {
